--- a/template/site/template.html
+++ b/template/site/template.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
         <title>Template</title>
-        <link href="./css/main.css" rel="stylesheet">
+        <link href="./css/main.css"  rel="stylesheet">
     </head>
 
 
@@ -13,7 +13,30 @@
         <header>
             <h2>Bananpaj</h2>
         </header>
-        
+
+        <nav class="nav">
+            <div class="nav_text">
+                <a>Startsida</a>
+            </div>
+
+            <div class="nav_text">
+                <a>Recept</a>
+            </div>
+        </nav>
+
+        <main>
+            <div class="main_text">
+                text
+            </div>
+
+            <div class="bildspel">
+                bildspel
+            </div>
+        </main>
+
+        <footer>
+            <p>footer-information</p>
+        </footer>
 
     </body>
 
