--- a/template/site/template.html
+++ b/template/site/template.html
@@ -16,11 +16,11 @@
 
         <nav class="nav">
             <div class="nav_text">
-                <a>Startsida</a>
+                <a href="./template.html">Startsida</a>
             </div>
 
             <div class="nav_text">
-                <a>Recept</a>
+                <a href="./template.html">Recept</a>
             </div>
         </nav>
 
