--- a/template/site/template.html
+++ b/template/site/template.html
@@ -26,7 +26,8 @@
 
         <main>
             <div class="main_text">
-                text
+                <p>Proin quis finibus elit. Vivamus lobortis rutrum justo. Mauris eget neque dapibus, ullamcorper ligula nec, convallis arcu. 
+                    Ut in luctus risus, at pulvinar nisi. Cras maximus, quam in vestibulum tempus, eros nisi ultrices leo, a vulputate nulla lorem vitae sapien.</p>
             </div>
 
             <div class="bildspel">
@@ -35,7 +36,7 @@
         </main>
 
         <footer>
-            <p>footer-information</p>
+            <p>banan.paj@bananpaj.com</p>
         </footer>
 
     </body>
