--- a/template/site/css/main.css
+++ b/template/site/css/main.css
@@ -50,8 +50,9 @@
 
     .main_text{
         background-color: #ff0094;
-        width: 100px;
-        height: 100p;
+        text-align: center;
+        font-size: 20px;
+        padding: 10px;
     }
 
     .bildspel{
@@ -65,6 +66,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        font-size: 15px;
     }
 
 }
