--- a/template/site/sad.html
+++ b/template/site/sad.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./css/nu.css">
     <title>das</title>
 </head>
 <body>
-<img id="gall" src="./img/4.jpg" onclick="chngimg(this)">
+<img id="gall" src="./img/1.jpg" onload="gallery(this)" width="250">
 </body>
-</html>
 <script rel="script" src="./js/script.js"></script>
+</html>
