--- a/template/site/sad.html
+++ b/template/site/sad.html
@@ -6,7 +6,7 @@
     <title>das</title>
 </head>
 <body>
-<img id="gall" src="./img/1.jpg" onload="gallery(this)" width="250">
+<img id="gall" src="./img/1.jpg" onclick="gallery(this)" width="250">
 </body>
 <script rel="script" src="./js/script.js"></script>
 </html>
